--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Facegun</title>
 	<style type="text/css">
-		
 		body {
-    		padding: 0;
-    		margin: 0;
+			padding: 0;
+			margin: 0;
 		}
 
-		#rest {		
+		#rest {
 			background-color: rgb(87, 231, 87);
 			border: none;
 			width: 150px;
@@ -21,40 +21,39 @@
 			border-radius: 10px;
 
 		}
+
 		/* video {
 			display: block;
 		} */
-		
+
 		canvas {
 			display: block;
 			position: absolute;
 			top: 0;
 		}
-	 	
-			
 	</style>
 </head>
+
 <body>
 	<video autoplay="true"></video>
-		<!-- <pre></pre> -->
+	<!-- <pre></pre> -->
 
-	
+
 
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
 	<script src="./lib/face-api/face-api.min.js"></script>
 
 	<script>
 
-		init()
+
 
 		async function init() {
 
 			// Variabili per le coordinate del centro del volto (0.0..1.0)
-			let centerX, centerY
 			// Variabili “smussate” (0.0..1.0)
+			let centerX, centerY
 			let smoothCenterX, smoothCenterY
 			// Boolean: il volto è stato individuato (true / false)
-
 			let isFace = false
 			// const canvas = document.querySelector('canvas')
 			// const ctx = canvas.getContext('2d')
@@ -67,9 +66,11 @@
 
 			// -- 2. inizializza la webcam ---------------------------------
 
+
 			const webcam = document.querySelector('video');
 
-			webcam.addEventListener('play', function() {
+
+			webcam.addEventListener('play', function () {
 				console.log('Webcam inizializzata e avviata.')
 				webcam.width = webcam.videoWidth / 2
 				webcam.height = webcam.videoHeight / 2
@@ -77,13 +78,12 @@
 				setup2()
 
 			})
-
 			// -- 3. avvia l’app -------------------------------------------
 
 			if (navigator.mediaDevices.getUserMedia) {
-				return navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
+				return navigator.mediaDevices.getUserMedia({ video: true }).then(function (stream) {
 					webcam.srcObject = stream
-				}).catch(function(error) {
+				}).catch(function (error) {
 					console.warn('C’è stato un problema con la webcam!')
 					console.log(error)
 				})
@@ -94,7 +94,6 @@
 			function setup2() {
 
 				requestAnimationFrame(loop)
-
 				// canvas.width = webcam.width * 3
 				// canvas.height = webcam.height * 3
 				centerX = 0.5
@@ -152,18 +151,19 @@
 			function avviaFaceDetect(videoSrc) {
 				console.log('FaceDetect avviato.')
 
-				setInterval(async function() {
+				setInterval(async function () {
 					const detections = await faceapi.detectSingleFace(videoSrc, new faceapi.TinyFaceDetectorOptions())
 					if (detections) {
 						const box = detections.box
 						// centerX e centerY sono normalizzati!
-						centerX = (box._x + box._width/2) * (windowWidth)  / videoSrc.videoWidth
-						centerY = (box._y + box._height/2) * (windowHeight) / videoSrc.videoHeight
+						centerX = map((box._x + box._width / 2) * (windowWidth) / videoSrc.videoWidth, 0, windowWidth, windowWidth, 0)
+						centerY = (box._y + box._height / 2) * (windowHeight) / videoSrc.videoHeight
+						// centerX = (box._x + box._width/2) * (windowWidth)  / videoSrc.videoWidth
+						// centerY = (box._y + box._height/2) * (windowHeight) / videoSrc.videoHeight
 						isFace = true
+						// console.log(centerX)
 
-						console.log(centerX,centerY)
-
-						cursore.x += (centerX - cursore.x)  * 0.1
+						cursore.x += (centerX - cursore.x) * 0.1
 						cursore.y += (centerY - cursore.y) * 0.1
 
 						drawCursor(cursore);
@@ -181,36 +181,36 @@
 		const TempoConcesso = 30 * 1000;
 		let start = -1e10;
 		let restartbtn = 0;
-		let button;
-	
+		// let button;
+
 
 		const target = {
-			x : 0,
-			y : 0,
-			raggio : 20
+			x: 0,
+			y: 0,
+			raggio: 20
 		}
 
 		const badTarget = {
-			x : 0,
-			y : 0,
-			raggio : 60
+			x: 0,
+			y: 0,
+			raggio: 60
 		}
 
 		const goodTarget = {
-			x : 0,
-			y : 0,
-			raggio : 20
+			x: 0,
+			y: 0,
+			raggio: 20
 		}
 
-		const cursore = { 
-			x : 0, 
-			y : 0, 
+		const cursore = {
+			x: 0,
+			y: 0,
 		}
 
 		// let targetR = 20;
 		// let targetX = 0;
 		// let targety = 0;
-		
+
 
 		// let raggio = 30;
 		// let tx = 0;
@@ -218,8 +218,8 @@
 
 
 		function randomizzaPosizioneDisco(disco) {
-			disco.x = random(disco.raggio*15, (width) - disco.raggio*15);
-			disco.y = random(disco.raggio*15, (height) - disco.raggio*15);
+			disco.x = random(disco.raggio * 15, (width) - disco.raggio * 15);
+			disco.y = random(disco.raggio * 15, (height) - disco.raggio * 15);
 		}
 
 		function hitDisco(disco, cur) {
@@ -229,111 +229,113 @@
 		}
 
 
-		function setup(){
+		function setup() {
 			const ctx = createCanvas(windowWidth, windowHeight)
 			start_game()
 		}
 
 
-		function start_game(){
+		function start_game() {
 
 			randomizzaPosizioneDisco(goodTarget)
 			randomizzaPosizioneDisco(badTarget)
 			randomizzaPosizioneDisco(target)
 
-			button = createButton("RESTART")
-			button.id("rest")
-			
+			// button = createButton("RESTART")
+			// button.id("rest")
+
 		}
 
 		function windowResized() {
- 		 	resizeCanvas(windowWidth, windowHeight);
-		
+			resizeCanvas(windowWidth, windowHeight);
+
 		}
 
-		function draw(){
-			
+		function draw() {
+
 			const t = millis() - start
 
 			if (t <= TempoConcesso) {
-				game();  
-				showTime (t)
+				game();
+				showTime(t)
 			} else {
 				endGame();
 			}
+
+
 		}
-		
+
+		function showTime(time) {
+			fill(255);
+			textSize(100);
+			text(Math.ceil((TempoConcesso - time) / 1000), width / 2 - 30, 100);
+
+		}
+
 		function drawCursor(cur) {
 			noFill();
 			stroke(0);
 			circle(cur.x, cur.y, 35, 35);
 			line(cur.x, cur.y - 20, cur.x, cur.y + 20);
 			line(cur.x - 20, cur.y, cur.x + 20, cur.y);
-			
+
 		}
 
 		function drawCursorW(cur) {
 			noFill();
 			stroke(255);
-			circle(cur.x, cur.y, 35, 35);
-			line(cur.x, cur.y - 20, cur.x, cur.y + 20);
-			line(cur.x - 20, cur.y, cur.x + 20, cur.y);
-			
+			circle(cur.x, cur.y, 45, 45);
+			line(cur.x, cur.y - 40, cur.x, cur.y + 40);
+			line(cur.x - 40, cur.y, cur.x + 40, cur.y);
+
 		}
-	
-		function drawTarget(disco) { 
-  			noStroke();
+
+		function drawTarget(disco) {
+			noStroke();
 
 			fill(200, 0, 0);
- 			circle(disco.x, disco.y, disco.raggio * 4);
+			circle(disco.x, disco.y, disco.raggio * 4);
 			fill(255)
 			circle(disco.x, disco.y, disco.raggio * 3);
-  			fill(200, 0, 0);
- 			circle(disco.x, disco.y, disco.raggio * 2);
-  			fill(255);
-  			circle(disco.x, disco.y, disco.raggio);
-		}	
-
-		function drawBadTarget(disco) { 
-  			noStroke();
-			fill(0, 0, 0);
- 			circle(disco.x, disco.y, disco.raggio * 2);
-			
+			fill(200, 0, 0);
+			circle(disco.x, disco.y, disco.raggio * 2);
+			fill(255);
+			circle(disco.x, disco.y, disco.raggio);
 		}
 
-		function drawGoodTarget(disco) { 
-  			noStroke();
+		function drawBadTarget(disco) {
+			noStroke();
+			fill(150, 20, 20);
+			circle(disco.x, disco.y, disco.raggio * 2);
+
+		}
+
+		function drawGoodTarget(disco) {
+			noStroke();
 			fill(240, 225, 49);
- 			circle(disco.x, disco.y, disco.raggio * 2);
-			
+			circle(disco.x, disco.y, disco.raggio * 2);
+
 		}
 
-		function showTime(time) {
-			fill(0);
-			textSize(100);
-			text(Math.ceil((TempoConcesso - time) / 1000), width/2 - 30, height/2);
-			
-		}
 
-		
-		function game(){
 
-			rest = document.querySelector("#rest")
-			rest.style.display = "none"
-			background(22, 130, 200); 
+		function game() {
+
+			// rest = document.querySelector("#rest")
+			// rest.style.display = "none"
+			background(255, 0, 0);
 
 			// target corretto
 			if (hitDisco(target, cursore)) {
-				background (22, 130, 200) 
+				background(255, 0, 0)
 				score += 1;
 				randomizzaPosizioneDisco(target)
 				randomizzaPosizioneDisco(badTarget)
 				randomizzaPosizioneDisco(goodTarget)
 
-			}else{
-				background(244, 248, 252)
+			} else {
+				background(43, 53, 85) //colore sfondo
 			}
-			
 			// target sbagliato
 			if (hitDisco(badTarget, cursore)) {
 				start -= 2 * 1000;
@@ -345,61 +347,88 @@
 				start += 5 * 1000;
 				randomizzaPosizioneDisco(goodTarget)
 			}
-			
+
 			drawTarget(target);
 			drawBadTarget(badTarget);
-			drawCursor(cursore);
+			drawCursorW(cursore);
 			drawGoodTarget(goodTarget);
-			
+
 			textSize(30);
-			text(`Score: ${score}\n`, 20, 40);
-			
-			
+			fill(255)
+			text(`Score: ${score}\n`, 20, 50);
+			text(`Record: ${record}\n`, 20, 90);
+
+
 		}
-		
+
 		function restart() {
 
-			let tr =  millis() - restartbtn
+			let tr = millis() - restartbtn
 
 			if (tr) {
 				start = millis();
 				score = 0;
 			}
 			console.log(tr)
-			
+
 		}
-		
-		
+
+
 		function endGame() {
-			background(75);
+			background(0);
+			// button.mouseOver(restart)
+			// button.position (width/2, height/2+60)
+
+			push()
+			fill( 37, 197, 74 )
+			stroke(0);
+			rect(width / 2.6, height / 2 + 100, 300, 100, 20)
+			textSize(32)
 			fill(255);
+			noStroke();
+			text("START",width / 2.28, (height/2)+160)
+			pop()
 
-			
-
-			button.mouseOver(restart)
-			button.position (width/2, height/2 + 60)
-
-			if (score >= record){
+			if (score >= record) {
 				record = score
-			}else if (score <= record){
+			} else if (score <= record) {
 				record = record
 			}
-			
-			text(`Score: ${score}\n`, width/2, height/2);
-			text(`Record: ${record}\n`, width/2, height/2 + 30);
+			push()
+			fill(255)
 			textSize(30);
+			stroke(0)
+			text(`Score: ${score}\nRecord: ${record}\n`, width / 2.6, (height / 2)+300);
+			pop()
+
+			push()
+			fill(255)
+			textSize(100)
+			stroke(0)
+			text(`Facegun`, width / 2.6, height / 4);
+			pop()
+
+			push()
+			fill(255)
+			textSize(20)
+			stroke(0)
+			text(`Hit the target to get points\nHit the yellow circle to get + 5 seconds\nStay away fromthe red circle, it gets you - 2 seconds`, width / 2.6, height / 3);
+			pop()
 
 			drawCursorW(cursore);
-			
+			if (cursore.x >= width / 2.6 && cursore.x <= (width / 2.6) + 300 && cursore.y >= (height / 2) + 100  && cursore.y <= (height / 2) + 200) {
+				return restart()
+			}
 
-			rest.style.display = "block"
+			// rest.style.display = "block"
 		}
 
-		
+		init()
 
-		
-		</script>
+
+	</script>
 
 
 </body>
+
 </html>
